# erav4-ass2

./: .dockerignore  DOCKER.md  Dockerfile  README.md  SECURITY.md  aws-deploy.sh  deploy-simple.sh  docker-compose.yml  docker-run.py  docker-start.sh  main.py  pyproject.toml  run.py  start.sh  test-docker.sh
cnn_visualizer/: __init__.py  cnn_visualizer.py
image_filter_demo/: __init__.py  image_filter.py
image_normalizer/: __init__.py  image_normalizer.py
templates/: base.html  index.html
templates/cnn_visualizer/: index.html  visualize.html
templates/image_filter/: index.html  result.html
templates/image_normalizer/: index.html  result.html
templates/one_hot_vector/: index.html  result.html
templates/token_checker/: index.html  result.html
token_length_checker/: __init__.py  token_checker.py
word_to_one_hot_vector/: __init__.py  one_hot_vector.py
